--- a/eungcheon/Queue/queue.html
+++ b/eungcheon/Queue/queue.html
@@ -67,6 +67,12 @@
         }
     </script>
 <body>
-
+    enqueue(value)
+    dequeue()
+    peek()
+    size()
+    clear()
+    isEmpty()
+    isFull()
 </body>
 </html>
